_build/html/reports/notebooks.err.log
Traceback (most recent call last):
  File "/Users/d/miniconda3/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/Users/d/miniconda3/lib/python3.10/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/d/miniconda3/lib/python3.10/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/d/miniconda3/lib/python3.10/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/Users/d/miniconda3/lib/python3.10/asyncio/base_events.py", line 649, in run_until_complete
    return future.result()
  File "/Users/d/miniconda3/lib/python3.10/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/Users/d/miniconda3/lib/python3.10/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/d/miniconda3/lib/python3.10/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
# Session 0

qui {
	
	if 1 { //settings,logfile,macros
	
	    cls 
		clear 
		
		capture log close 
		log using session0.log, replace 
		
		global url https://wwwn.cdc.gov/Nchs/Nhanes/1999-2000/
		global datafile DEMO.XPT 
		
		
	}
	
	if 2 { //import datafile
		
		import sasxport5 "${url}${datafile}", clear
		noi di "no of vars `c(k)' x " " no of obs " _N
	}
	
}



------------------

[0;36m  Cell [0;32mIn[1], line 3[0;36m[0m
[0;31m    qui {[0m
[0m        ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (2498905410.py, line 3)

